# c-project-manager

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: commands.rs  compiler.rs  filenames.rs  hello_world.c  main.rs  manifest.rs
src/compiler/: gcc.rs
src/manifest/: errors.rs
src/package/: builder.rs  compiler.rs
src/package/builder/: errors.rs
src/package/compiler/: errors.rs
