[package]
name = "cpm"
version = "0.1.1-alpha"
edition = "2021"
description = "C Project Manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }
semver = { version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
toml = "0.8.10"
walkdir = "2.4.0"
